test/rails_app/app/views/rejects/show.html.erb
<p id="notice"><%= notice %></p>

<p>
  <b>Product:</b>
  <%= link_to @reject.product.codename, @reject.product %>
</p>


<%= link_to 'Edit', edit_reject_path(@reject) %> |
<%= link_to 'Back', rejects_path %>
